documentacion/obtenida/ARINC 429/driver and software/PC629-1/API/P61W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

P61W32API VOID __stdcall DRV629_RegWrPort(USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrPortSel(USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrProm(USHORT value,ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrReset(HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrRProm(ULONG cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrSegSel(USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrTGSG(USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_RegWrTISG(USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_Reset(HCARD handleval);

P61W32API VOID __stdcall DRV629_SetCID(USHORT cidval,USHORT index);

P61W32API VOID __stdcall DRV629_SetHandler(LPVOID funcval,USHORT index);

P61W32API VOID __stdcall DRV629_SetInitFlag(USHORT flagval);

P61W32API VOID __stdcall DRV629_SetMask1(USHORT mask1val,USHORT index);

P61W32API VOID __stdcall DRV629_SetMask2(USHORT mask2val,USHORT index);

P61W32API VOID __stdcall DRV629_SetPromAddr(ULONG addrval,USHORT index);

P61W32API VOID __stdcall DRV629_SetTGSG(USHORT tgsgval,USHORT index);

P61W32API VOID __stdcall DRV629_SetTISG(USHORT tisgval,USHORT index);

P61W32API ULONG __stdcall DRV629_Shl(ULONG dataval,USHORT cntval);

P61W32API ULONG __stdcall DRV629_Shr(ULONG dataval,USHORT cntval);

P61W32API VOID __stdcall DRV629_Srand(USHORT value);

P61W32API BOOL __stdcall DRV629_Start(HCARD handleval);

P61W32API BOOL __stdcall DRV629_Stop(HCARD handleval);

P61W32API LPSTR __stdcall DRV629_Strchrr(LPSTR str,USHORT value);

P61W32API INT __stdcall DRV629_Strcmp(LPCSTR str1,LPCSTR str2);

P61W32API INT __stdcall DRV629_Strcmpi(LPSTR str1,LPSTR str2);

P61W32API LPSTR __stdcall DRV629_Strcpy(LPSTR tostr,LPSTR fromstr);

P61W32API INT __stdcall DRV629_Stricmp(LPSTR str1,LPSTR str2);

P61W32API USHORT __stdcall DRV629_Strlen(LPSTR str);

P61W32API LPSTR __stdcall DRV629_Strlwr(LPSTR str);

P61W32API LPSTR __stdcall DRV629_Strmfe(LPSTR newname,LPSTR oldname,LPSTR ext);

P61W32API INT __stdcall DRV629_Strncmp(LPSTR str1,LPSTR str2,USHORT count);

P61W32API LPSTR __stdcall DRV629_Strncpy(LPSTR tostr,LPSTR fromstr,USHORT count);

P61W32API LPSTR __stdcall DRV629_Strpfe(LPSTR newname,LPSTR oldname,LPSTR ext);

P61W32API LPSTR __stdcall DRV629_Strtok(LPSTR str,LPSTR tokenstr);

P61W32API LPSTR __stdcall DRV629_Strupr(LPSTR str);

P61W32API USHORT __stdcall DRV629_TableAddrGet(USHORT index);

P61W32API VOID __stdcall DRV629_TableAddrSet(USHORT index,USHORT value);

P61W32API USHORT __stdcall DRV629_TableIrqGet(USHORT index);

P61W32API VOID __stdcall DRV629_TableIrqSet(USHORT index,USHORT value);

P61W32API USHORT __stdcall DRV629_TablePortGet(USHORT index);

P61W32API VOID __stdcall DRV629_TablePortSet(USHORT index,USHORT value);

P61W32API USHORT __stdcall DRV629_TableSelGet(USHORT index);

P61W32API VOID __stdcall DRV629_TableSelSet(USHORT index,USHORT value);

P61W32API USHORT __stdcall DRV629_TableSizeGet(VOID);

P61W32API VOID __stdcall DRV629_TableSizeSet(USHORT value);

P61W32API ERRVAL __stdcall DRV629_Token(LPVOID fh,LPSTR buf,USHORT count);

P61W32API USHORT __stdcall DRV629_Tolower(USHORT value);

P61W32API USHORT __stdcall DRV629_Toupper(USHORT value);

P61W32API ERRVAL __stdcall DRV629_Uncheck(HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_UncheckAll();

P61W32API INT __stdcall DRV629_ValAsciiCmpi(LPSTR str1,LPSTR str2);

P61W32API LPSTR __stdcall DRV629_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

P61W32API VOID __stdcall DRV629_ValAsciiTrimLead(LPSTR buf);

P61W32API VOID __stdcall DRV629_ValAsciiTrimTrail(LPSTR buf);

P61W32API ULONG __stdcall DRV629_ValFromAscii(LPCSTR asciistr,INT radixval);

P61W32API LPSTR __stdcall DRV629_ValIncAscii(LPSTR asciistr);

P61W32API LPSTR __stdcall DRV629_ValInccAscii(LPSTR asciistr);

P61W32API BOOL __stdcall DRV629_ValIsLower(INT value);

P61W32API INT __stdcall DRV629_ValLenAscii(INT numbits,INT radixval);

P61W32API LPSTR __stdcall DRV629_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

P61W32API INT __stdcall DRV629_ValToUpper(INT value);

P61W32API LPCSTR __stdcall DRV629_Version(VOID);

P61W32API VOID __stdcall DRV629_WipeRam(USHORT value,HCARD handleval);

P61W32API VOID __stdcall DRV629_WrALT(USHORT altval,HCARD handleval);

P61W32API VOID __stdcall DRV629_WrAXT(USHORT axtval,HCARD handleval);

P61W32API VOID __stdcall DRV629_WrCID(USHORT cidval,HCARD handleval);

P61W32API VOID __stdcall DRV629_WrTITGSG(USHORT tival,USHORT tgval,USHORT sgval,HCARD handleval);

P61W32API VOID __stdcall DRV629_XFormat(USHORT value,HCARD handleval);

/**
*
*  PC629-1 Driver predefined constants.
*
**/

#define ALT_OFF             0x0000      //Disables alt, enables primary schedule
#define ALT_ON              0x0001      //Enables alternate schedule

#define AXT_OFF             0x0000      //Disables alternate label extensions
#define AXT_ON              0x0001      //Enables alternate label extensions

#define OPT_NONE            0x0000      //No interrupt options selected
#define INT_ERROR           0x0001      //Interrupts generated on errors

#define FORMAT_INDEP        0x0000      //Selects independent schedule format
#define FORMAT_BLOCK        0x0001      //Selects block schedule format

/**
*
*  PC629-1 Parse Codes.
*
**/

#define INFOVAL_ORG			1		//ORG information
#define INFOVAL_ROM			2		//ROM switch
#define INFOVAL_RAM			3		//RAM switch
#define INFOVAL_RAMBYTE		4		//RAM byte value
#define INFOVAL_RAMWORD		5		//RAM word value
#define INFOVAL_RAMDWORD	6		//RAM long word value
#define INFOVAL_ROMBYTE		7		//ROM byte value
#define INFOVAL_ROMWORD		8		//ROM word value
#define INFOVAL_ROMDWORD	9		//ROM long word value
#define INFOVAL_OPCODE		10		//Opcode code
#define INFOVAL_OPVALUE		11		//Opcode value

/**
*
*  PC629-1 Direct Registers.
*
**/

#define MEM_PAGE_REG	0x0000		//Read/write memory page
#define PORT_SEL_REG	0x0001		//Read/write internal port select
#define INT_CLR_REG		0x0002		//Write clears interrupts
#define VECT_LSB_REG	0x0002		//Read interrupt vector LSB
#define RESET_REG		0x0003		//Write triggers master reset
#define VECT_MSB_REG	0x0003		//Read interrupt vector MSB
#define REG_ACCESS_LSB	0x0004		//Read/write internal register LSB
#define REG_ACCESS_MSB	0x0005		//Read internal register MSB
#define SEG_SEL_REG		0x0006		//Write to segment select
#define STATUS_REG		0x0006		//Read status