documentacion/obtenida/ARINC 429/driver and software/PC629-1/API/P61W32NET.VB

    Public Declare Sub DRV629_RegWrPort Lib "P61W32.DLL" Alias "_DRV629_RegWrPort@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_RegWrPortSel Lib "P61W32.DLL" Alias "_DRV629_RegWrPortSel@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_RegWrProm Lib "P61W32.DLL" Alias "_DRV629_RegWrProm@12" (ByVal value As UInt16, ByVal cntval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub DRV629_RegWrReset Lib "P61W32.DLL" Alias "_DRV629_RegWrReset@4" (ByVal handleval As UInt32)
    Public Declare Sub DRV629_RegWrRProm Lib "P61W32.DLL" Alias "_DRV629_RegWrRProm@8" (ByVal cntval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub DRV629_RegWrSegSel Lib "P61W32.DLL" Alias "_DRV629_RegWrSegSel@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_RegWrTGSG Lib "P61W32.DLL" Alias "_DRV629_RegWrTGSG@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_RegWrTISG Lib "P61W32.DLL" Alias "_DRV629_RegWrTISG@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_Reset Lib "P61W32.DLL" Alias "_DRV629_Reset@4" (ByVal handleval As UInt32)
    Public Declare Sub DRV629_SetCID Lib "P61W32.DLL" Alias "_DRV629_SetCID@8" (ByVal cidval As UInt16, ByVal index As UInt16)
    Public Declare Sub DRV629_SetHandler Lib "P61W32.DLL" Alias "_DRV629_SetHandler@8" (ByVal funcval As IntPtr, ByVal index As UInt16)
    Public Declare Sub DRV629_SetInitFlag Lib "P61W32.DLL" Alias "_DRV629_SetInitFlag@4" (ByVal flagval As UInt16)
    Public Declare Sub DRV629_SetMask1 Lib "P61W32.DLL" Alias "_DRV629_SetMask1@8" (ByVal mask1val As UInt16, ByVal index As UInt16)
    Public Declare Sub DRV629_SetMask2 Lib "P61W32.DLL" Alias "_DRV629_SetMask2@8" (ByVal mask2val As UInt16, ByVal index As UInt16)
    Public Declare Sub DRV629_SetPromAddr Lib "P61W32.DLL" Alias "_DRV629_SetPromAddr@8" (ByVal addrval As UInt32, ByVal index As UInt16)
    Public Declare Sub DRV629_SetTGSG Lib "P61W32.DLL" Alias "_DRV629_SetTGSG@8" (ByVal tgsgval As UInt16, ByVal index As UInt16)
    Public Declare Sub DRV629_SetTISG Lib "P61W32.DLL" Alias "_DRV629_SetTISG@8" (ByVal tisgval As UInt16, ByVal index As UInt16)
    Public Declare Function DRV629_Shl Lib "P61W32.DLL" Alias "_DRV629_Shl@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function DRV629_Shr Lib "P61W32.DLL" Alias "_DRV629_Shr@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Sub DRV629_Srand Lib "P61W32.DLL" Alias "_DRV629_Srand@4" (ByVal value As UInt16)
    Public Declare Function DRV629_Start Lib "P61W32.DLL" Alias "_DRV629_Start@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_Stop Lib "P61W32.DLL" Alias "_DRV629_Stop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_Strchrr Lib "P61W32.DLL" Alias "_DRV629_Strchrr@8" (ByRef str As String, ByVal value As UInt16) As UInt32
    Public Declare Function DRV629_Strcmp Lib "P61W32.DLL" Alias "_DRV629_Strcmp@8" (ByRef str1 As String, ByRef str2 As String) As Int32
    Public Declare Function DRV629_Strcmpi Lib "P61W32.DLL" Alias "_DRV629_Strcmpi@8" (ByRef str1 As String, ByRef str2 As String) As Int32
    Public Declare Function DRV629_Strcpy Lib "P61W32.DLL" Alias "_DRV629_Strcpy@8" (ByRef tostr As String, ByRef fromstr As String) As UInt32
    Public Declare Function DRV629_Stricmp Lib "P61W32.DLL" Alias "_DRV629_Stricmp@8" (ByRef str1 As String, ByRef str2 As String) As Int32
    Public Declare Function DRV629_Strlen Lib "P61W32.DLL" Alias "_DRV629_Strlen@4" (ByRef str As String) As UInt16
    Public Declare Function DRV629_Strlwr Lib "P61W32.DLL" Alias "_DRV629_Strlwr@4" (ByRef str As String) As UInt32
    Public Declare Function DRV629_Strmfe Lib "P61W32.DLL" Alias "_DRV629_Strmfe@12" (ByRef newname As String, ByRef oldname As String, ByRef ext As String) As UInt32
    Public Declare Function DRV629_Strncmp Lib "P61W32.DLL" Alias "_DRV629_Strncmp@12" (ByRef str1 As String, ByRef str2 As String, ByVal count As UInt16) As Int32
    Public Declare Function DRV629_Strncpy Lib "P61W32.DLL" Alias "_DRV629_Strncpy@12" (ByRef tostr As String, ByRef fromstr As String, ByVal count As UInt16) As UInt32
    Public Declare Function DRV629_Strpfe Lib "P61W32.DLL" Alias "_DRV629_Strpfe@12" (ByRef newname As String, ByRef oldname As String, ByRef ext As String) As UInt32
    Public Declare Function DRV629_Strtok Lib "P61W32.DLL" Alias "_DRV629_Strtok@8" (ByRef str As String, ByRef tokenstr As String) As UInt32
    Public Declare Function DRV629_Strupr Lib "P61W32.DLL" Alias "_DRV629_Strupr@4" (ByRef str As String) As UInt32
    Public Declare Function DRV629_TableAddrGet Lib "P61W32.DLL" Alias "_DRV629_TableAddrGet@4" (ByVal index As UInt16) As UInt16
    Public Declare Sub DRV629_TableAddrSet Lib "P61W32.DLL" Alias "_DRV629_TableAddrSet@8" (ByVal index As UInt16, ByVal value As UInt16)
    Public Declare Function DRV629_TableIrqGet Lib "P61W32.DLL" Alias "_DRV629_TableIrqGet@4" (ByVal index As UInt16) As UInt16
    Public Declare Sub DRV629_TableIrqSet Lib "P61W32.DLL" Alias "_DRV629_TableIrqSet@8" (ByVal index As UInt16, ByVal value As UInt16)
    Public Declare Function DRV629_TablePortGet Lib "P61W32.DLL" Alias "_DRV629_TablePortGet@4" (ByVal index As UInt16) As UInt16
    Public Declare Sub DRV629_TablePortSet Lib "P61W32.DLL" Alias "_DRV629_TablePortSet@8" (ByVal index As UInt16, ByVal value As UInt16)
    Public Declare Function DRV629_TableSelGet Lib "P61W32.DLL" Alias "_DRV629_TableSelGet@4" (ByVal index As UInt16) As UInt16
    Public Declare Sub DRV629_TableSelSet Lib "P61W32.DLL" Alias "_DRV629_TableSelSet@8" (ByVal index As UInt16, ByVal value As UInt16)
    Public Declare Function DRV629_TableSizeGet Lib "P61W32.DLL" Alias "_DRV629_TableSizeGet@0" () As UInt16
    Public Declare Sub DRV629_TableSizeSet Lib "P61W32.DLL" Alias "_DRV629_TableSizeSet@4" (ByVal value As UInt16)
    Public Declare Function DRV629_Token Lib "P61W32.DLL" Alias "_DRV629_Token@12" (ByVal fh As IntPtr, ByRef buf As String, ByVal count As UInt16) As Int32
    Public Declare Function DRV629_Tolower Lib "P61W32.DLL" Alias "_DRV629_Tolower@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Toupper Lib "P61W32.DLL" Alias "_DRV629_Toupper@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Uncheck Lib "P61W32.DLL" Alias "_DRV629_Uncheck@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_UncheckAll Lib "P61W32.DLL" Alias "_DRV629_UncheckAll@0" () As Int32
    Public Declare Function DRV629_ValAsciiCmpi Lib "P61W32.DLL" Alias "_DRV629_ValAsciiCmpi@8" (ByRef str1 As String, ByRef str2 As String) As Int32
    Public Declare Function DRV629_ValAsciiCpy Lib "P61W32.DLL" Alias "_DRV629_ValAsciiCpy@12" (ByRef strdest As String, ByRef strsrc As String, ByVal count As Int32) As UInt32
    Public Declare Sub DRV629_ValAsciiTrimLead Lib "P61W32.DLL" Alias "_DRV629_ValAsciiTrimLead@4" (ByRef buf As String)
    Public Declare Sub DRV629_ValAsciiTrimTrail Lib "P61W32.DLL" Alias "_DRV629_ValAsciiTrimTrail@4" (ByRef buf As String)
    Public Declare Function DRV629_ValFromAscii Lib "P61W32.DLL" Alias "_DRV629_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Int32) As UInt32
    Public Declare Function DRV629_ValIncAscii Lib "P61W32.DLL" Alias "_DRV629_ValIncAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function DRV629_ValInccAscii Lib "P61W32.DLL" Alias "_DRV629_ValInccAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function DRV629_ValIsLower Lib "P61W32.DLL" Alias "_DRV629_ValIsLower@4" (ByVal value As Int32) As Int32
    Public Declare Function DRV629_ValLenAscii Lib "P61W32.DLL" Alias "_DRV629_ValLenAscii@8" (ByVal numbits As Int32, ByVal radixval As Int32) As Int32
    Public Declare Function DRV629_ValToAscii Lib "P61W32.DLL" Alias "_DRV629_ValToAscii@16" (ByVal value As UInt32, ByRef asciistr As String, ByVal numbits As Int32, ByVal radixval As Int32) As UInt32
    Public Declare Function DRV629_ValToUpper Lib "P61W32.DLL" Alias "_DRV629_ValToUpper@4" (ByVal value As Int32) As Int32
    Public Declare Function DRV629_Version Lib "P61W32.DLL" Alias "_DRV629_Version@0" () As UInt32
    Public Declare Sub DRV629_WipeRam Lib "P61W32.DLL" Alias "_DRV629_WipeRam@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_WrALT Lib "P61W32.DLL" Alias "_DRV629_WrALT@8" (ByVal altval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_WrAXT Lib "P61W32.DLL" Alias "_DRV629_WrAXT@8" (ByVal axtval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_WrCID Lib "P61W32.DLL" Alias "_DRV629_WrCID@8" (ByVal cidval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_WrTITGSG Lib "P61W32.DLL" Alias "_DRV629_WrTITGSG@16" (ByVal tival As UInt16, ByVal tgval As UInt16, ByVal sgval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_XFormat Lib "P61W32.DLL" Alias "_DRV629_XFormat@8" (ByVal value As UInt16, ByVal handleval As UInt32)

    '/**
    '*
    '*  PC629-1 Driver predefined constants.
    '*
    '**/

    Public Const ALT_OFF As UInt16 = &H0 '//Disables alt, enables primary schedule
    Public Const ALT_ON As UInt16 = &H1  '//Enables alternate schedule

    Public Const AXT_OFF As UInt16 = &H0 '//Disables alternate label extensions
    Public Const AXT_ON As UInt16 = &H1  '//Enables alternate label extensions

    Public Const OPT_NONE As UInt16 = &H0    '//No interrupt options selected
    Public Const INT_ERROR As UInt16 = &H1   '//Interrupts generated on errors

    Public Const FORMAT_INDEP As UInt16 = &H0    '//Selects independent schedule format
    Public Const FORMAT_BLOCK As UInt16 = &H1    '//Selects block schedule format

    '/**
    '*
    '*  PC629-1 Parse Codes.
    '*
    '**/

    Public Const INFOVAL_ORG As Int16 = 1   '//ORG information
    Public Const INFOVAL_ROM As Int16 = 2   '//ROM switch
    Public Const INFOVAL_RAM As Int16 = 3   '//RAM switch
    Public Const INFOVAL_RAMBYTE As Int16 = 4   '//RAM byte value
    Public Const INFOVAL_RAMWORD As Int16 = 5   '//RAM word value
    Public Const INFOVAL_RAMDWORD As Int16 = 6  '//RAM long word value
    Public Const INFOVAL_ROMBYTE As Int16 = 7   '//ROM byte value
    Public Const INFOVAL_ROMWORD As Int16 = 8   '//ROM word value
    Public Const INFOVAL_ROMDWORD As Int16 = 9  '//ROM long word value
    Public Const INFOVAL_OPCODE As Int16 = 10   '//Opcode code
    Public Const INFOVAL_OPVALUE As Int16 = 11  '//Opcode value

    '/**
    '*
    '*  PC629-1 Direct Registers.
    '*
    '**/

    Public Const MEM_PAGE_REG As UInt16 = &H0    '//Read/write memory page
    Public Const PORT_SEL_REG As UInt16 = &H1    '//Read/write internal port select
    Public Const INT_CLR_REG As UInt16 = &H2 '//Write clears interrupts
    Public Const VECT_LSB_REG As UInt16 = &H2    '//Read interrupt vector LSB
    Public Const RESET_REG As UInt16 = &H3   '//Write triggers master reset
    Public Const VECT_MSB_REG As UInt16 = &H3    '//Read interrupt vector MSB
    Public Const REG_ACCESS_LSB As UInt16 = &H4  '//Read/write internal register LSB
    Public Const REG_ACCESS_MSB As UInt16 = &H5  '//Read internal register MSB
    Public Const SEG_SEL_REG As UInt16 = &H6 '//Write to segment select
    Public Const STATUS_REG As UInt16 = &H6  '//Read status

    '/**
    '*
    '*  PC629-1 Indirect Registers.
    '*
    '**/
